cmake_minimum_required (VERSION 3.0)
project(login_server)
add_definitions(-std=c++11)
add_library(user_opt SHARED user_opt.cpp cJSON.c CJsonObject.cpp gen-cpp/container_mng.cpp gen-cpp/room_opt_constants.cpp gen-cpp/room_opt_types.cpp)
add_executable(reg_cgi reg_cgi.cpp)
add_executable(login_cgi login_cgi.cpp)
add_executable(new_password new_password.cpp)
aux_source_directory(gen-cpp RPC_SOURCE)
add_executable(rpc_server ${RPC_SOURCE})

target_link_libraries(user_opt fcgi hiredis thrift ssl crypto)
target_link_libraries(reg_cgi user_opt)
target_link_libraries(login_cgi user_opt)
target_link_libraries(new_password user_opt)
target_link_libraries(rpc_server thrift ssl crypto)
